Fixed Link Image Shift

--- a/css/menu.css
+++ b/css/menu.css
@@ -6,7 +6,7 @@
 	background-color: #000000;
 }
 .title > span > a:hover {
-	padding-left:1;
+	padding-left:2;
 }
 .nvbar {
 	border-style: outset hidden solid hidden;
